--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,11 +19,8 @@
   "homepage": "https://github.com/yangguangyongg/solana_tool#readme",
   "dependencies": {
     "@solana/web3.js": "^1.98.4",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "node-fetch": "^3.3.2"
   },
-
-  "type": "module",
-  "scripts": {
-    "start": "node src/index.js"
-  }
+  "type": "module"
 }
