support create wallet, airdrop, buy the deep and sweep

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "solana_tool",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js"
@@ -22,6 +23,5 @@
     "@solana/web3.js": "^1.98.4",
     "dotenv": "^17.2.3",
     "node-fetch": "^3.3.2"
-  },
-  "type": "module"
+  }
 }
